--- a/.github/workflows/other.yml
+++ b/.github/workflows/other.yml
@@ -45,4 +45,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-styles-js-
 
-
+      # Step 6: Deploy website (if deploying)
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./html
