`feat: Update eGFR calculation and display in calc service`
`diff` includes changes to:

* `index.html` in `html/services/calc` directory
* `results.html` in `js/services/calc/html` directory

--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "SDP",
     "University"
   ],
-  "author": "Jay",
+  "author": "Jay & Bartek",
   "license": "MIT",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/JayNightmare/SDP-Website/issues"
   },
