--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/JayNightmare/SDP-Website#readme",
   "dependencies": {
+    "qrcode": "^1.5.4",
     "sdp-website": "file:"
   }
 }
