Updates dashboards and metadata; revises licensing
Simplifies clinician dashboard layout by removing redundant elements. Adjusts patient dashboard UI by removing unused action button. Enhances index.html with responsive metadata for improved accessibility. Updates project version and license information in package files, expanding keywords for better discoverability.

No issue reference provided.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sdp-website",
-  "version": "0.5.2",
+  "version": "0.9.2",
   "description": "SDP Website about kidneys",
   "main": "index.html",
   "scripts": {
@@ -12,10 +12,25 @@
   },
   "keywords": [
     "SDP",
-    "University"
+    "University",
+    "Kingston University",
+    "Kidney",
+    "Website",
+    "Javascript",
+    "HTML",
+    "CSS",
+    "Web",
+    "Web Development",
+    "Web Design",
+    "Web Application",
+    "Web App",
+    "Web Development Project",
+    "Web Design Project",
+    "Web Application Project",
+    "Web App Project"
   ],
   "author": "Jay & Bartek",
-  "license": "MIT",
+  "license": "CC0-1.0",
   "type": "module",
   "bugs": {
     "url": "https://github.com/JayNightmare/SDP-Website/issues"
