feat: Implement core dashboard functionalities for patients and clinicians, eGFR calculation, and account management.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
   },
   "homepage": "https://github.com/JayNightmare/SDP-Website#readme",
   "dependencies": {
-    
+    "dotenv": "^17.2.3"
   }
 }
